refactoring code css

--- a/card/index.html
+++ b/card/index.html
@@ -38,8 +38,8 @@
                             quo?
                         </p>
                     </div>
-                    <div>
-                        <a href="#" class="bottom-link">Submit</a>
+                    <div class="button-link-div">
+                        <a href="#">Submit</a>
                     </div>
                 </div>
             </div>
@@ -58,8 +58,8 @@
                             quo?
                         </p>
                     </div>
-                    <div>
-                        <a href="#" class="bottom-link">Submit</a>
+                    <div class="button-link-div">
+                        <a href="#">Submit</a>
                     </div>
                 </div>
             </div>
@@ -78,8 +78,8 @@
                             quo?
                         </p>
                     </div>
-                    <div>
-                        <a href="#" class="bottom-link">Submit</a>
+                    <div class="button-link-div">
+                        <a href="#">Submit</a>
                     </div>
                 </div>
             </div>
