css flex-center

--- a/hero-page/hero-page.html
+++ b/hero-page/hero-page.html
@@ -14,17 +14,19 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-6">
-                <h3 class="display-4">Bootstrap heading</h3>
+            <div class="col-6 flex-container">
+                <h3>Bootstrap heading</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio amet obcaecati nihil aliquam error
                     repellat a fuga modi dolorum asperiores voluptates, necessitatibus ea beatae. Eveniet assumenda
                     maxime hic harum maiores.</p>
             </div>
+
             <div class="col-6 background-image">
             </div>
         </div>
     </div>
 
+    
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
